src/render/snapshots/webgit__render__summary__tests__summary_html_loading.snap
---
source: src/render/summary.rs
expression: "render(SummaryProps\n{\n    branches:\n    vec![RefRow::pending(\"main\".to_string()),\n    RefRow::pending(\"develop\".to_string()),], more_branches: false, tags:\n    vec![RefRow::pending(\"v1.0.0\".to_string())], more_tags: false, commits:\n    None, clone_url: \"https://example.org/repo.git\".to_string(),\n})"
---
<h3 class="summary-heading">Clone</h3>
<div class="clone-url">git clone https://example.org/repo.git</div>
<h3 class="summary-heading">Branches</h3>
<table class="summary-table">
<thead>
<tr>
<th>Branch</th>
<th>Commit message</th>
<th>Author</th>
<th>Age</th>
</tr>
</thead>
<tbody>
<tr>
<td class="name">
<a href="#!/tree?h=main">main</a>
</td>
<td class="msg">
<span aria-label="Loading" class="loading-dots">
</span>
</td>
<td class="author">
</td>
<td class="age">
</td>
</tr>
<tr>
<td class="name">
<a href="#!/tree?h=develop">develop</a>
</td>
<td class="msg">
<span aria-label="Loading" class="loading-dots">
</span>
</td>
<td class="author">
</td>
<td class="age">
</td>
</tr>
</tbody>
</table>
<h3 class="summary-heading">Tags</h3>
<table class="summary-table">
<thead>
<tr>
<th>Tag</th>
<th>Commit message</th>
<th>Download</th>
<th>Author</th>
<th>Age</th>
</tr>
</thead>
<tbody>
<tr>
<td class="name">
<a href="#!/refs/tags/v1.0.0">v1.0.0</a>
</td>
<td class="msg">
<span aria-label="Loading" class="loading-dots">
</span>
</td>
<td class="snapshot">
<a href="#!/snapshot?h=v1.0.0" class="snapshot-link">repo-v1.0.0.tar.gz</a>
</td>
<td class="author">
</td>
<td class="age">
</td>
</tr>
</tbody>
</table>
<h3 class="summary-heading">Recent commits</h3>
<p class="msg">
<span aria-label="Loading" class="loading-dots">
</span>
</p>
